--- a/src/markdown/general/verkenning_macroinvertebraten_map_vmm.Rmd
+++ b/src/markdown/general/verkenning_macroinvertebraten_map_vmm.Rmd
@@ -102,14 +102,6 @@ Selectie fysicochemische data:
 
 Verder opgekuist tot een dataset met enkel zomerjaar en winterjaar gegevens voor NO3- (meest complete gegevens).
 
-Er zijn actieve en slapende locaties:
-
--   Actieve locaties = vorige jaar overschrijding gedetecteerd in winterhalfjaar
-    -   Worden maandelijks opgevolgd en stalen genomen
--   Slapende locaties = vorig jaar geen overschrijding gedetecteerd 
-    -   Worden enkel 3 maal bemeten in het winterhalfjaar
--   Actieve locaties kunnen slapend worden en omgekeerd
-
 
 ```{r vmm-fysicochemie}
 # https://sites.google.com/a/inbo.be/intranet/home/ondersteuning/IT-en-data/datasystemen/vmm-oppervlaktewaters
@@ -335,7 +327,17 @@ mmif_beste_reeksen <- mapviewdata %>%
 
 ## Fysico-chemische data: nitraat
 
-De zomerhalfjaar gegevens voor nitraat zijn veel completer dan de winterhalfjaar gegevens voor nitraat.
+De zomerhalfjaar gegevens voor nitraat zijn iets completer dan de winterhalfjaar gegevens voor nitraat.
+
+De reden hiervoor is het verschil tusssen actieve en slapende locaties:
+
+-   __Actieve__ locaties = vorige jaar overschrijding gedetecteerd in winterhalfjaar
+    -   Worden _maandelijks_ opgevolgd en stalen genomen
+-   __Slapende__ locaties = vorig jaar geen overschrijding gedetecteerd 
+    -   Worden enkel _3 maal bemeten in het winterhalfjaar_
+-   Actieve locaties kunnen slapend worden en omgekeerd
+
+
 
 Als doelstelling hanteert VMM vanaf MAP 6 (2019-2022) de gemiddelde nitraatconcentratie per afstroomzone op basis van de wintergegevens:
 
